Fix Spacing & Links

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
 
 h1 {
 	font-size: 1.2em;
-	margin: 0;
+	margin: 0 0 0.2em;
 }
 
 p{
@@ -87,7 +87,7 @@ a {
 	background-image: linear-gradient(to bottom, rgba(0,0,0,0) 75%, rgba(0,0,0,0.8) 75%);
     background-repeat: repeat-x;
     background-size: 2px 2px;
-    background-position: 0 0.9em;
+    background-position: 0 1.3em;
 	transition: 0.1s ease;
 }
 
